--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    dependencies {
-        def hiltVersion = "2.38.1"
+    ext.roomVersion = "2.4.1"
+    ext.dataStoreVersion = "1.0.0"
+    ext.retrofitVersion = "2.9.0"
+    ext.moshiVersion = "1.10.0"
+    ext.hiltVersion = "2.38.1"
+    ext.navigationVersion = "2.5.0-alpha01"
 
+    repositories {
+        google()
+    }
+
+    dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:$hiltVersion")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion")
     }
 }
 
